solved problems with home info container and navbar on mobile

--- a/frontend/src/styles/HomeInfoContainer.css
+++ b/frontend/src/styles/HomeInfoContainer.css
@@ -5,6 +5,7 @@
   justify-content: center;
   height: 70vh;
   padding: 50px;
+  z-index: 1;
 }
 
 .wrapper {
@@ -132,14 +133,15 @@
 }
 
 @media screen and (max-width: 450px) {
-  .info-container {
+  .info-mobile-container {
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    padding: 30px;
+    padding: 10px;
     height: 50vh;
-    margin-top: 60px;
+    margin-top: 30px;
+    z-index: 1;
   }
 
   .wrapper {
@@ -150,5 +152,22 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
+  }
+
+  .image-container {
+    height: 100%;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    /* padding: 50px; */
+  }
+
+  .fitness-img {
+    max-width: 100%;
+    height: auto;
+    backdrop-filter: blur(2px);
+    /* margin-left: 60px;
+      margin-right: 0px; */
   }
 }
