--- a/frontend/src/styles/Navbar.css
+++ b/frontend/src/styles/Navbar.css
@@ -5,6 +5,7 @@
   justify-content: space-between;
   align-items: center;
   color: white;
+  z-index: 999;
 }
 
 .brand-logo {
@@ -25,6 +26,7 @@
 .menu-items-mobile {
   display: none;
   opacity: 0;
+  z-index: 999;
 }
 
 .menu-item {
@@ -74,7 +76,7 @@
     margin-left: 30%;
     opacity: 1;
     transition: opacity 0.3s ease-in-out;
-    box-shadow: inset 1px 0 0 0 #D3D3D3;
+    box-shadow: inset 1px 0 0 0 #d3d3d3;
   }
 
   .menu-item {
